[tool.poetry]
name = "maas-api"
version = "0.1.0"
description = "An api client library for MAAS.io"
authors = ["Jelle Helsen <jelle.helsen@hcode.be>"]
homepage = "https://github.com/jellehelsen/maas-api"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26"
requests-oauthlib = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2"
requests-mock = "^1.9"
coverage = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
